<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:elevation="5dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/wine_image"
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:src="@drawable/cakewinebottle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/cart_wine_name"
                style="@style/Primary_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="24dp"
                android:text="@string/riunite_lambrusco"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cart_item_amt"
                style="@style/sec_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/item_price"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/cart_wine_name"
                app:layout_constraintTop_toBottomOf="@+id/cart_wine_name" />

            <ImageButton
                android:id="@+id/cart_item_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.629"
                app:layout_constraintStart_toEndOf="@+id/cart_item_quantity"
                app:layout_constraintTop_toTopOf="@+id/cart_item_subtract" />

            <TextView
                android:id="@+id/cart_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="3"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/cart_item_add"
                app:layout_constraintStart_toEndOf="@+id/cart_item_subtract"
                app:layout_constraintTop_toTopOf="@+id/cart_item_subtract" />

            <ImageButton
                android:id="@+id/cart_item_subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_baseline_remove_24"
                app:layout_constraintEnd_toStartOf="@+id/cart_item_quantity"
                app:layout_constraintStart_toEndOf="@+id/cart_item_amt"
                app:layout_constraintTop_toBottomOf="@+id/cart_item_amt" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>